--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
 <html lang="ja">
     <head>
+        <meta charset="UTF-8">
         <div>"Hello World"</div>
+        <title>猫の実態</title>
+        <meta name="description" content="猫の好きなもの、日々の生活をご紹介">
     </head>
-    <body>
 
+    <body>
+        <h1>猫の一日</h1>
+        <p>ひたすら寝ています。</p>
     </body>
 </html>
