--- a/index.html
+++ b/index.html
@@ -20,5 +20,13 @@
         <p>おいしいブレンドコーヒーとヘルシーなオーガニックフードで体の内側から癒やされてください。</p>
 
         <img src="images/sakura.jpg" alt="美しい桜">
+
+        <table border="1">
+            <tr>
+                <th>プラン名</th>
+                <th>料金</th>
+            </tr>
+            
+        </table>
     </body>
 </html>
