--- a/index.html
+++ b/index.html
@@ -1,32 +1,16 @@
 <!DOCTYPE html>
-<html lang="ja">
-    <head>
-        <meta charset="UTF-8">
-        <title>猫の実態</title>
-        <meta name="description" content="猫の好きなもの、日々の生活をご紹介">
-    </head>
+<html lang="en">
+<head>
+    <title>Pulse Animation</title>
+    <!-- Font Awesome Icon CDN -->
 
-    <body>
-        <h1>猫の一日</h1>
-        <p>ひたすら寝ています。</p>
+    <!-- Stylesheet -->
+    <link rel="Stylesheet" href="style.css">
 
-        <h1>猫の実態</h1>
-        <h2>猫の趣味は？</h2>
-        <h3>お昼寝大好き！</h3>
-        <h3>爪研ぎは欠かせません</h3>
-        <h3>気付けばやってる毛づくろい</h3>
+</head>
+<body>
+    <div class="pulse">
 
-        <p>体に優しい自然食を提供する、WCB CAFE。無添加の食材を利用したメニューが特徴です。</p>
-        <p>おいしいブレンドコーヒーとヘルシーなオーガニックフードで体の内側から癒やされてください。</p>
-
-        <img src="images/sakura.jpg" alt="美しい桜">
-
-        <table border="1">
-            <tr>
-                <th>プラン名</th>
-                <th>料金</th>
-            </tr>
-            
-        </table>
-    </body>
+    </div>
+</body>
 </html>
