--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <title>Pulse Animation</title>
     <!-- Font Awesome Icon CDN -->
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
     <!-- Stylesheet -->
     <link rel="Stylesheet" href="style.css">
 
 </head>
 <body>
     <div class="pulse">
-
+        <i class="fas fa-bell"></i>
     </div>
 </body>
 </html>
