--- a/analog-clock/index.html
+++ b/analog-clock/index.html
@@ -13,6 +13,12 @@
             <div class="minute hand" id="minute"></div>
             <div class="seconds hand" id="seconds"></div>
             <!-- <img class="clockimg" src="img/ieben-tokei-300px.png" alt="clock"> -->
+            <svg class="clockface" width="300" height="300" viewBox="-150 -150 300 300">
+                <circle cx="0" cy="0" r="145" fill="transparent" stroke="pink" stroke-width="5" pathlength="60" 
+                stroke-dasharray="0.1 0.9" stroke-dashoffset="0.05"></circle>
+                <circle cx="0" cy="0" r="145" fill="transparent" stroke="aqua" stroke-width="10" pathlength="12" 
+                stroke-dasharray="0.1 0.9" stroke-dashoffset="0.05"></circle>
+            </svg>
         </div>
         <!-- Script -->
         <script src="script.js"></script>
